[package]
name = "treeversal"
version = "0.1.0"
edition = "2024"
authors = ["Petrichor Park <petrichor.park@canonical.com>"]
# repository = "https://github.com/petrak-at-canonical/tree-installer-sketch"
license = "MIT"

[dependencies]
console = { version = "0.16.3", optional = true }
getset = "0.1.6"

[features]
default = ["console"]
console = ["dep:console"]

[[example]]
name = "console_demo"
required-features = ["console"]
