[package]
name = "treeversal"
description = "Traverse and manipulate a tree"
version = "0.1.1"
edition = "2024"
authors = ["Petrichor Park <petrichor.park@canonical.com>"]
homepage = "https://github.com/petrak-at-canonical/treeversal"
repository = "https://github.com/petrak-at-canonical/treeversal"
license = "MIT"
categories = ["config", "gui", "visualization"]

[dependencies]
console = { version = "0.16.3", optional = true }
getset = "0.1.6"

[features]

[[example]]
name = "console_demo"
required-features = ["console"]

[dev-dependencies]
fastrand = "2.4.1"
