[package]
name = "treeversal"
version = "0.2.0"
authors = ["Petrichor Park <petrichor.park@canonical.com>"]
description = "Traverse and manipulate a tree"
license = "MIT"
edition = "2024"
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/petrak-at-canonical/treeversal"
repository = "https://github.com/petrak-at-canonical/treeversal"
categories = ["config", "gui", "visualization"]

[dependencies]
console = { version = "0.16.3", optional = true }
getset = "0.1.6"

[features]

[[example]]
name = "console_demo"
required-features = ["console"]

[dev-dependencies]
fastrand = "2.4.1"
